[gd_scene load_steps=11 format=3 uid="uid://cuymivutdkbe7"]

[ext_resource type="Script" path="res://characters/player/player.gd" id="1_a854c"]
[ext_resource type="PackedScene" uid="uid://kt3ybpjvi62b" path="res://ui/main_UI.tscn" id="2_b1knh"]
[ext_resource type="AudioStream" uid="uid://bpmn6n41ilmbs" path="res://sounds/sfx/lightOn.wav" id="2_ys117"]
[ext_resource type="Script" path="res://characters/player/debug_info_label.gd" id="3_0ejgq"]
[ext_resource type="AudioStream" uid="uid://1402fr2vifat" path="res://sounds/sfx/lightOff.wav" id="3_3pcr2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_q32mm"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_yojiw"]

[sub_resource type="Animation" id="Animation_vtdbu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_rtivv"]
resource_name = "flicker"
length = 2.0
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:light_energy")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.8, 1, 1.3, 1.5, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.9, 0.7, 0.7, 0.9, 0.7, 0.6, 1.0, 1.2, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_crya4"]
_data = {
"RESET": SubResource("Animation_vtdbu"),
"flicker": SubResource("Animation_rtivv")
}

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_a854c")
canUseLight = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_q32mm")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
mesh = SubResource("CapsuleMesh_yojiw")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
fov = 65.0

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(0, 0, -3)

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_q32mm")

[node name="Lantern" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
visible = false
light_color = Color(1, 1, 0.756863, 1)
omni_range = 6.0

[node name="TurnOnLight" type="AudioStreamPlayer" parent="Lantern"]
stream = ExtResource("2_ys117")

[node name="TurnOffLight" type="AudioStreamPlayer" parent="Lantern"]
stream = ExtResource("3_3pcr2")

[node name="LightFlicker" type="AnimationPlayer" parent="Lantern"]
libraries = {
"": SubResource("AnimationLibrary_crya4")
}
autoplay = "flicker"

[node name="MainUI" parent="." instance=ExtResource("2_b1knh")]

[node name="DebugInfo" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_0ejgq")

[node name="InRangeOfCollider" type="Label" parent="DebugInfo"]
layout_mode = 0
offset_right = 76.0
offset_bottom = 23.0
text = "IN RANGE"

[node name="FPSLabel" type="Label" parent="DebugInfo"]
layout_mode = 0
offset_top = 25.0
offset_right = 40.0
offset_bottom = 48.0

[node name="ThingsCollected" type="Label" parent="DebugInfo"]
layout_mode = 0
offset_top = 50.0
offset_right = 40.0
offset_bottom = 73.0

[node name="IsFullscreen" type="Label" parent="DebugInfo"]
layout_mode = 0
offset_top = 75.0
offset_right = 40.0
offset_bottom = 98.0

[node name="IsInCutScene" type="Label" parent="DebugInfo"]
layout_mode = 0
offset_top = 125.0
offset_right = 40.0
offset_bottom = 148.0

[node name="Coordinates" type="Label" parent="DebugInfo"]
layout_mode = 0
offset_top = 150.0
offset_right = 40.0
offset_bottom = 173.0

[connection signal="giveMouseSensitivity" from="MainUI" to="." method="setMouseSensitivity"]
[connection signal="startGame" from="MainUI" to="." method="startGame"]

[editable path="MainUI"]
